--- a/app/views/bank_accounts/index.html.slim
+++ b/app/views/bank_accounts/index.html.slim
@@ -20,9 +20,9 @@ h2 ..
         td= account.number
         td= account.note
         td
-          = link_to t('bank_transactions.index.title'), [account, :bank_transactions]
+          = link_to t('bank_transactions.title'), [account, :bank_transactions]
           = " | "
-          = link_to t('bank_transfers.index.title'), [account, :bank_transfers]
+          = link_to t('bank_transfers.title'), [account, :bank_transfers]
           = " | "
           = link_to t('common.link.edit'), [:edit, account]
           = " | "
