--- a/app/views/creditcards/preview.html.slim
+++ b/app/views/creditcards/preview.html.slim
@@ -17,4 +17,5 @@ h2= t(".title")
   br
 
 h3 프리뷰
+- params[:card_type] = "card_approved_sources" if params[:card_type] == "card_approved_sources_oversea"
 = render "#{params[:card_type]}/list", params[:card_type].to_sym => @collection, menu: false
