--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -95,7 +95,8 @@ table tr td ul {
           <li><%= link_to t("users.index.title"), :controller => "users" %></li>
           <% end %>
           <li><%= link_to t("payroll_categories.title"), :controller => "payroll_categories" %></li>
-            <li><%= link_to t("creditcards.title"), :creditcards %></li>
+          <li><%= link_to t("payrolls.title"), :controller => "payrolls" %></li>
+          <li><%= link_to t("creditcards.title"), :creditcards %></li>
         </ul>
       </td>
     <% end %>
