--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -97,6 +97,8 @@ table tr td ul {
           <li><%= link_to t("payroll_categories.title"), :controller => "payroll_categories" %></li>
           <li><%= link_to t("payrolls.title"), :controller => "payrolls" %></li>
           <li><%= link_to t("creditcards.title"), :creditcards %></li>
+          <li><%= link_to t("attachments.title"), :controller => "attachments" %></li>
+          <li><%= link_to t("permissions.title"), :controller => "permissions" %></li>
         </ul>
       </td>
     <% end %>
