--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -42,6 +42,7 @@
         <td align="right"><%= taxbill.taxman.phonenumber %></td>
       </tr>
     </table>
+    <%= render 'changelog', target: taxbill %>
   </div>
 
     <%= render :partial => "shared/show_attachment", :object => taxbill %>
