--- a/app/views/vacations/show.html.slim
+++ b/app/views/vacations/show.html.slim
@@ -15,7 +15,7 @@ h2 ...
         = " | "
         = link_to t('common.link.destroy'), [user, vacation], :method => :delete, :confirm => "Are you sure?"
     h3= "#{vacation.from} ~ #{vacation.to} : #{t('vacations.show.info', total: vacation.period, used: vacation.used.total, remain: vacation.remain)}"
-      
+
     - unless vacation.used.empty?
       table#list-table
         tr
@@ -54,10 +54,10 @@ h2 ...
       br
     - else
       h4= t('used_vacations.show.empty')
+    = render 'changelog', target: vacation
 
 - else
   h4= t('.empty')
-  
-  
+
+
   p=
-  
