--- a/app/views/application/_changelog.html.slim
+++ b/app/views/application/_changelog.html.slim
@@ -1,17 +1,3 @@
 - if @user.ingroup? "admin"
   h3= t("common.changes")
-  - if !target.change_histories.blank?
-    ul
-      - for history in target.change_histories.all(:order => "updated_at DESC")
-        li
-          ="["
-          = history.updated_at.strftime("%Y.%m.%d %H:%M:%S %p")
-          ="] "
-          = history.target.constantize.human_attribute_name(history.fieldname)
-          = ": "
-          = history.before_value
-          == " &rarr; "
-          = history.after_value
-          = "("
-          = history.user.name
-          = ")"
+  = render 'changelog_item', target: target
