--- a/app/views/payrolls/show.html.slim
+++ b/app/views/payrolls/show.html.slim
@@ -1,6 +1,8 @@
 
 #show_command
-    = link_to t('common.title.list'), [:payrolls]
+  = link_to t('common.title.edit'), edit_payroll_path(payroll)
+  = " | "
+  = link_to t('common.title.list'), [:payrolls]
 h2 ...
 
 ul
@@ -8,8 +10,8 @@ ul
   li= payroll.user.name
   
 ul
-  - payroll.payroll_items.each do |pyi|
-    li= "#{pyi.payroll_category.title} : #{number_to_currency pyi.amount}"
-    = link_to "edit", edit_payroll_payroll_item_path(payroll,pyi)
+  - payroll.items.each do |item|
+    li= "#{item.payroll_category.title} : #{number_to_currency item.amount}"
+    = link_to "edit", edit_payroll_payroll_item_path(payroll,item)
     
 = link_to "new", new_payroll_payroll_item_path(payroll)
