--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -99,6 +99,7 @@ table tr td ul {
           <li><%= link_to t("creditcards.title"), :creditcards %></li>
           <li><%= link_to t("attachments.title"), :controller => "attachments" %></li>
           <li><%= link_to t("permissions.title"), :controller => "permissions" %></li>
+          <li><%= link_to t("change_histories.title"), :controller => "change_histories" %></li>
         </ul>
       </td>
     <% end %>
