applying attachment module

--- a/app/views/attachments/show.html.erb
+++ b/app/views/attachments/show.html.erb
@@ -28,8 +28,8 @@
     <td><%=h @attachment.filepath %></td>
   </tr>
   <tr>
-    <th><%= Attachment.human_attribute_name('owner_table_name') %></th>
-    <td><%=h @attachment.owner_table_name %></td>
+    <th><%= Attachment.human_attribute_name('owner_type') %></th>
+    <td><%=h @attachment.owner_type %></td>
   </tr>
   <tr>
     <th><%= Attachment.human_attribute_name('owner_id') %></th>
