--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -45,7 +45,7 @@
     <%= render 'changelog', target: taxbill %>
   </div>
 
-    <%= render :partial => "shared/show_attachment", :object => taxbill %>
+    <%= render "shared/attachments/detail", :target => taxbill %>
     <div style="clear: both;"></div>
 
     <div>
