--- a/app/views/attachments/edit.html.erb
+++ b/app/views/attachments/edit.html.erb
@@ -21,8 +21,8 @@
     <%= f.text_field :original_filename %>
   </p>
   <!-- <p>
-    <%= f.label :owner_table_name, Attachment.human_attribute_name('owner_table_name') %>
-    <%= f.text_field :owner_table_name %>
+    <%= f.label :owner_type, Attachment.human_attribute_name('owner_type') %>
+    <%= f.text_field :owner_type %>
   </p>
   <p>
     <%= f.label :owner_id, Attachment.human_attribute_name('owner_id') %>
