--- a/app/views/change_histories/show.html.slim
+++ b/app/views/change_histories/show.html.slim
@@ -4,7 +4,7 @@
   = " | "
   = link_to t('common.title.destroy'), change_history, :method => :delete, :confirm => "Are you sure?"
   = " | "
-  = link_to t('common.title.list'), :histories
+  = link_to t('common.title.list'), :change_histories
 
 h2= t("common.title.show")
 .box
