--- a/app/views/change_histories/_form.html.slim
+++ b/app/views/change_histories/_form.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  = link_to t('common.title.back'), :histories
+  = link_to t('common.title.back'), :change_histories
 
 h2= t("common.title.#{action_name}")
 
