--- a/app/views/application/_changelog_item.html.slim
+++ b/app/views/application/_changelog_item.html.slim
@@ -6,6 +6,9 @@
         = history.updated_at.strftime("%Y.%m.%d %H:%M:%S %p")
         ="] "
         - _model = history.target ? history.target.constantize : target.class
+        ="["
+        = _model.model_name.human
+        ="] "
         = _model.human_attribute_name(history.fieldname)
         = ": "
         = history.before_value
