--- a/app/views/business_clients/_form.html.erb
+++ b/app/views/business_clients/_form.html.erb
@@ -30,7 +30,7 @@
       <%= f.label :owner %>
       <%= f.text_field :owner %>
     </p>
-    <%= render 'shared/attachments/form', label: t('business_clients.edit.picture') %>
+    <%= render 'shared/attachments/form', form: f %>
       <p>
           <%= f.submit %>
       </p>
