--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -59,6 +59,6 @@
 </table>
 <%= render 'changelog', target: @cardbill %>
 </div>
-<%= render :partial => "shared/show_attachment", :object => @cardbill %>
+<%= render "shared/attachments/detail", :target => @cardbill %>
 <div style="clear: both;"></div>
 </div>
