--- a/app/views/creditcards/show.html.erb
+++ b/app/views/creditcards/show.html.erb
@@ -41,7 +41,7 @@
     </tr>
   </table>
   </div>
-  <%= render :partial => "shared/show_attachment", :object => @creditcard  %>
+  <%= render "shared/attachments/detail", :target => @creditcard %>
   <div style="clear:both;">
 
     <% if @user.ingroup? "admin" %>
