--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -17,7 +17,8 @@
     <%= f.label Project.model_name.human %>
     <%= f.collection_select(:project_id, @projects, :id, :name)%>
   </p>
-  <%= render :partial => "shared/new_attachment" %>
+  <%= render 'shared/attachments/form', form: f %>
+
 <% unless params[:tag].blank? %>
   <p>
     <%= label_tag "Tag" %>
