--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -33,7 +33,7 @@
     <% end %>
     </ul>
   </div>
-  <%= render :partial => "shared/show_attachment", :object => @document %>
+  <%= render "shared/attachments/detail", :target => @document %>
   <div style="clear:both;"></div>
 </div>
 
