--- a/app/views/pettycashes/edit.html.erb
+++ b/app/views/pettycashes/edit.html.erb
@@ -27,7 +27,7 @@
     <%= f.text_area :description %>
   </p>
   <p>
-        <%= render 'shared/attachments/form', label: t("common.title.attachment") %>
+    <%= render 'shared/attachments/form', form: f %>
   </p>
   <p>
         <%= f.submit t("common.button.update") %>
