--- a/app/views/taxbills/_form.html.erb
+++ b/app/views/taxbills/_form.html.erb
@@ -20,7 +20,7 @@
       <%= f.select :taxman_id, options_for_select(Taxbill.taxmen_list, taxbill.taxman_id) %>
     </p>
     <p>
-      <%= render 'shared/attachments/new_form', label: t("taxbills.#{action_name}.picture"), form: f, target: taxbill %>
+      <%= render 'shared/attachments/form', form: f %>
     </p>
   </div>
   <p>
