--- a/app/views/cardbills/new.html.erb
+++ b/app/views/cardbills/new.html.erb
@@ -44,7 +44,9 @@
     <%= f.label :approveno, Cardbill.human_attribute_name('approveno') %>
     <%= f.text_field :approveno %>
   </p>
-  <%= render :partial => "shared/new_attachment" %>
+  <p>
+    <%= render 'shared/attachments/form', form: f %>
+  </p>
 </div>
 <%= f.submit t('common.button.create') %>
 <% end %>
