--- a/app/views/creditcards/edit.html.erb
+++ b/app/views/creditcards/edit.html.erb
@@ -35,9 +35,9 @@
     <%= f.label :cardholder, Creditcard.human_attribute_name("cardholder") %>
     <%= f.text_field :cardholder %>
   </p>
-	<p>
-    <%= render 'shared/attachments/form', label: t('hrinfos.edit.picture') %>
-	</p>
+  <p>
+    <%= render 'shared/attachments/form', form: f %>
+  </p>
 </div>
 <%= f.submit t("common.button.update") %>
 <% end %>
