--- a/app/views/creditcards/new.html.erb
+++ b/app/views/creditcards/new.html.erb
@@ -34,7 +34,9 @@
     <%= f.label :cardholder, Creditcard.human_attribute_name('cardholder') %>
     <%= f.text_field :cardholder %>
   </p>
-  <%= render :partial => "shared/new_attachment" %>
+  <p>
+    <%= render 'shared/attachments/form', form: f %>
+  </p>
 </div>
 <%= f.submit t("common.button.create") %>
 <% end %>
