--- a/app/views/namecards/edit.html.erb
+++ b/app/views/namecards/edit.html.erb
@@ -39,8 +39,9 @@
     <%= f.label :email, Namecard.human_attribute_name('email') %>
     <%= f.text_field :email %>
   </p>
-
-  <%= render :partial => "shared/edit_attachment", :object => @namecard %>
+  <p>
+    <%= render 'shared/attachments/form', form: f %>
+  </p>
 
 </div>
 <%= f.submit t('common.button.update') %>
