--- a/app/views/namecards/new.html.erb
+++ b/app/views/namecards/new.html.erb
@@ -37,7 +37,9 @@
     <%= f.label Namecard.human_attribute_name('email') %>
     <%= f.text_field :email %> <%= t(".email_example") %>
   </p>
-  <%= render :partial => "shared/new_attachment" %>
+  <p>
+    <%= render 'shared/attachments/form', form: f %>
+  </p>
 </div>
 <%= f.submit t('common.button.create') %>
 <% end %>
