--- a/app/views/pettycashes/new.html.erb
+++ b/app/views/pettycashes/new.html.erb
@@ -23,12 +23,9 @@
     <%= f.label :description, Pettycash.human_attribute_name('description') %>
     <%= f.text_area :description %>
   </p>
-<%= fields_for :attachment, @attachment do |attachment| -%>
   <p>
-    <%= attachment.label :uploaded_file, t("common.title.attachment") %>
-    <%= attachment.file_field :uploaded_file %>
+    <%= render 'shared/attachments/form', form: f %>
   </p>
-<% end -%>
 </div>
   <p>
     <%= f.submit t('common.button.create') %>
