--- a/app/views/hrinfos/new.html.erb
+++ b/app/views/hrinfos/new.html.erb
@@ -35,12 +35,9 @@
     <%= f.label :joined_on, Hrinfo.human_attribute_name('joined_on')%>
     <%= f.date_select :joined_on, :order => [:year, :month, :day] %>
   </p>
-<%= fields_for :attachment, @attachment do |attachment| -%>
   <p>
-    <%= attachment.label t('hrinfos.edit.picture') %>
-    <%= attachment.file_field :uploaded_file %>
+    <%= render 'shared/attachments/form', form: f %>
   </p>
-<% end -%>
   <p>
   </p>
 </div>
