--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -27,11 +27,7 @@
     <% end %>
     </td>
     <td>
-      <% if !document.tags(true).blank? %>
-        <% tag_names = document.tags.index_by {|t| t.name} %>
-        <%= tag_names.keys.sort.join ", " %>
-      <% else %>
-      <% end %>
+      <%=h document.tag_list %>
     </td>
   </tr>
 <% end %>
