--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -16,13 +16,10 @@
         <% else %>
         <% end %>
       </td></tr>
-      <tr><th><%= Document.human_attribute_name("tags") %></th><td>
-        <% if !@document.tags.blank? %>
-        <% tag_names = @document.tags.index_by {|t| t.name } %>
-        <%= tag_names.keys.sort.join ", " %>
-        <% else %>
-        <% end %>
-      </td></tr>
+      <tr>
+        <th><%= Document.human_attribute_name("tags") %></th>
+        <td><%= @document.tag_list %></td>
+      </tr>
     </table>
     <h3><%= t(".backlink") %></h3>
     <ul>
