--- a/app/views/shared/attachments/_detail.html.erb
+++ b/app/views/shared/attachments/_detail.html.erb
@@ -6,7 +6,7 @@
     attachment = attachments[at]
 %>
 <div id="attach">
-      <img src="<%= url_for(:controller => "attachments", :action => 'picture', :id => attachment.id, :w => "600", :h => "800") %>" />
+      <%= link_to image_tag(url_for(:controller => "attachments", :action => 'picture', :id => attachment.id, :w => "600", :h => "800")), url_for(:controller => "attachments", :action => 'picture', :id => attachment.id), target: :blank %>
   <% end %>
       <center>
   <% if attachments && at < attachments.count %>
