--- a/app/views/used_vacations/_form.html.slim
+++ b/app/views/used_vacations/_form.html.slim
@@ -15,6 +15,8 @@ h2= t("common.title.#{action_name}")
     p
       = f.label :period
       = f.text_field :period
+      br
+      = t("used_vacations.period_help")
     p
       = f.label :note
       = f.text_area :note
