--- a/app/views/used_vacations/_form.html.slim
+++ b/app/views/used_vacations/_form.html.slim
@@ -21,4 +21,4 @@ h2= t("common.title.#{action_name}")
       = f.label :note
       = f.text_area :note
   p
-    = f.submit
+    = f.submit t("used_vacations.new.link")
