--- a/app/views/vacations/show.html.slim
+++ b/app/views/vacations/show.html.slim
@@ -37,14 +37,14 @@ h2 ...
             td
               = used.note
             td
-              = used.approve ? "yes" : "no"
+              = used.approve ? t("used_vacations.approval_completed") : t("used_vacations.approval_waiting")
               - if @user.ingroup?("admin")
-                = " ("
+                = " ["
                 - if used.approve
                   = link_to t('vacations.approve.cancel'), vacation_used_vacation_approve_path(vacation, used, approve: false), :method => :put
                 - else
                   = link_to t('vacations.approve.approve'), vacation_used_vacation_approve_path(vacation, used, approve: true), :method => :put
-                = ")"
+                = "]"
 
             - if @user.ingroup?("admin")
               td width="150" align="center"
